Попытка заставить работать Forge